# pulse-app

./: README.md  bump.config.ts  index.html  package-lock.json  package.json
.github/workflows/: codez.yml  lockfile.yml  tauri.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_utils.rs  command.rs  gmail.rs  main.rs  panel_appearance.rs  panel_configuraion.rs  panel_listeners.rs  panel_positioning.rs  tray.rs  workspace_listener.rs
src/components/: ConfigPage.css  ConfigPage.tsx  LandingPage.css  LandingPage.tsx
src/hooks/: useAppConfig.ts  useStrongholdInit.ts
src/services/: EmailService.ts
src/utils/: strongholdHelpers.ts
