[package]
name = "pulse"
version = "0.1.6"
description = "A minimalist macOS menubar app for email notifications."
authors = ["https://github.com/YiweiShen/"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [
    "tray-icon",
    'image-ico',
    "image-png",
    "macos-private-api",
] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2.0.0-beta.7"
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }
monitor = { git = "https://github.com/ahkohd/tauri-toolkit", branch = "v2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
cargo-clippy = []
