[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "z"   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.

[package]
name = "pulse"
version = "0.1.17"
description = "A minimalist macOS menubar app for email notifications."
authors = ["https://github.com/YiweiShen/"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.10", features = [
    "tray-icon",
    'image-ico',
    "image-png",
    "macos-private-api",
] }
tauri-plugin-opener = "2.5"
tauri-plugin-shell = "2.2.1"
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }
monitor = { git = "https://github.com/ahkohd/tauri-toolkit", branch = "v2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2.4"
reqwest = { version = "0.12", features = ["default-tls", "json"] }
tokio = { version = "1", features = ["net", "io-util", "time"] }
sha2 = "0.10"
rand = "0.9"
base64 = "0.22"
urlencoding = "2"

[features]
cargo-clippy = []

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2.5"
